# wisdom_hal_extender

./: README.md
libs/rp2x_rfm69_rudp/: README.md
libs/rp2x_rfm69_rudp/libs/rp2x_gpio_irq/src/: rp2x_gpio_irq.c
libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/: CMakeLists.txt
libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/docs/: configuration.md  interface.md
libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/examples/tx/: CMakeLists.txt
libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/examples/tx/src/: tx_example.c
libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/src/: rp2x_rfm69.h  rp2x_rfm69_definitions.h  rp2x_rfm69_interface.h
libs/rp2x_rfm69_rudp/src/: rfm69_lp.h  rp2x_rfm69_rudp.c  rp2x_rfm69_rudp.h  rudp_config.h  rudp_generic.h  wtp-1_0.h
modules/radio/: .gitmodules  CMakeLists.txt
modules/radio/libs/rp2x_rfm69_rudp/: CMakeLists.txt
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_gpio_irq/: CMakeLists.txt  README.md
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_gpio_irq/src/: rp2x_gpio_irq.h
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/: README.md
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/examples/: README.md
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/examples/rx/: CMakeLists.txt
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/examples/rx/src/: rx_example.c
modules/radio/libs/rp2x_rfm69_rudp/libs/rp2x_rfm69/src/: rp2x_rfm69_interface.c
modules/radio/libs/rp2x_rfm69_rudp/src/: rfm69_lp.c  rudp_includes.h  rudp_validation.c  wtp-1_0.c
modules/radio/src/: whale_radio.c
src/: whale_radio.c
